Fix the Live View issue by replacing the json parameters till Ubiquity fixes the ability to properely configure a hostname

--- a/ubiquiti_video_proxy/ubiquiti_video_proxy.conf
+++ b/ubiquiti_video_proxy/ubiquiti_video_proxy.conf
@@ -17,6 +17,7 @@ upstream ubivideo_7080 {
         server CONTROLLER_HOSTNAME:7080;
 }
 
+# Note: 7446 is IPv4-only
 upstream ubivideo_7446 {
         server CONTROLLER_HOSTNAME:7446;
 }
@@ -38,6 +39,14 @@ server {
 	ssl_certificate_key	SSL_CERT_KEY;
 
 	location / {
+		# Live view fix, dirty, but works
+		sub_filter		'CONTROLLER_REALHOSTNAME' 'HTTP_HOSTNAME';
+		sub_filter_once		off;
+		sub_filter_types	'application/json';
+		sub_filter_last_modified off;
+		proxy_set_header	Accept-Encoding "";
+
+		# Set a CSP that is quite open, need to refine this
 		add_header		"Content-Security-Policy" "";
 		proxy_set_header	Host CONTROLLER_REALHOSTNAME;
 		proxy_set_header	X-Real-IP $remote_addr;
