--- a/ubiquiti_video_proxy/ubiquiti_video_proxy.conf
+++ b/ubiquiti_video_proxy/ubiquiti_video_proxy.conf
@@ -47,7 +47,7 @@ server {
 		proxy_set_header	Accept-Encoding "";
 
 		# Set a CSP that is quite open, need to refine this
-		add_header		"Content-Security-Policy" "";
+		add_header		"Content-Security-Policy" "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src 'self' wss://HTTP_HOSTNAME:7443 wss://HTTP_HOSTNAME:7446; img-src 'self' data: blob:; media-src blob:";
 		proxy_set_header	Host CONTROLLER_REALHOSTNAME;
 		proxy_set_header	X-Real-IP $remote_addr;
 		proxy_set_header	X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -77,7 +77,8 @@ server {
 	ssl_certificate_key	SSL_CERT_KEY;
 
 	location / {
-		add_header		"Content-Security-Policy" "";
+		# Set a CSP that is quite open, need to refine this
+		add_header		"Content-Security-Policy" "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src 'self' wss://HTTP_HOSTNAME:7443 wss://HTTP_HOSTNAME:7446; img-src 'self' data: blob:; media-src blob:";
 		proxy_set_header	Host CONTROLLER_REALHOSTNAME;
 		proxy_set_header	X-Real-IP $remote_addr;
 		proxy_set_header	X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -103,7 +104,8 @@ server {
 	access_log LOGNAME;
 
 	location / {
-		add_header		"Content-Security-Policy" "";
+		# Restricted CSP, HTTP should not be used anyway at all
+		add_header		"Content-Security-Policy" "default-src 'self';";
 		proxy_set_header	Host CONTROLLER_REALHOSTNAME;
 		proxy_set_header	X-Real-IP $remote_addr;
 		proxy_set_header	X-Forwarded-For $proxy_add_x_forwarded_for;
