--- a/ubiquiti_video_proxy/ubiquiti_video_proxy.conf
+++ b/ubiquiti_video_proxy/ubiquiti_video_proxy.conf
@@ -38,14 +38,32 @@ server {
 	ssl_certificate		SSL_CERT_BUNDLE;
 	ssl_certificate_key	SSL_CERT_KEY;
 
-	location / {
-		# Live view fix, dirty, but works
+	# Live view fix, dirty, but works
+	# In a separate location block so that we only touch these URLs and do not disable compression for the rest
+	location ~* ^/api/2.0/stream/(.*)/url$ {
+		# Disable compression abilities, otherwise the sub-filter can't inspect the text as it will be compressed
+		proxy_set_header	Accept-Encoding "";
+
+		# Use sub-filter to change the answer
 		sub_filter		'CONTROLLER_REALHOSTNAME' 'HTTP_HOSTNAME';
 		sub_filter_once		off;
 		sub_filter_types	'application/json';
 		sub_filter_last_modified off;
-		proxy_set_header	Accept-Encoding "";
 
+		# Set a CSP that is quite open, need to refine this
+		add_header		"Content-Security-Policy" "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src 'self' wss://HTTP_HOSTNAME:7443 wss://HTTP_HOSTNAME:7446; img-src 'self' data: blob:; media-src blob:";
+		proxy_set_header	Host CONTROLLER_REALHOSTNAME;
+		proxy_set_header	X-Real-IP $remote_addr;
+		proxy_set_header	X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header	X-Forwarded-Proto $scheme;
+		proxy_http_version	1.1;
+		proxy_set_header	Upgrade $http_upgrade;
+		proxy_set_header	Connection "upgrade";
+		proxy_pass		https://ubivideo_7443;
+		proxy_redirect		default;
+	}
+
+	location / {
 		# Set a CSP that is quite open, need to refine this
 		add_header		"Content-Security-Policy" "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src 'self' wss://HTTP_HOSTNAME:7443 wss://HTTP_HOSTNAME:7446; img-src 'self' data: blob:; media-src blob:";
 		proxy_set_header	Host CONTROLLER_REALHOSTNAME;
